Infrastructure/K8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: hostservice
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hostservice

---
apiVersion: v1
kind: Service
metadata:
  name: clientservice
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    name: clientservice
